# python-inject-it

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
inject_it/: __init__.py  _checks.py  _injector.py  decorators.py  exceptions.py  objects.py  register.py  stubs.py
tests/: conftest.py  test_decorators.py  test_register.py
