[project]
name = "inject-it"
version = "0.1.0"
description = ""
authors = [
    {name = "Leandro de Souza", email = "leandrodesouzadev@gmail.com"},
]
license-expression = "MIT"
dependencies = []
requires-python = ">=3.9"

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "mypy>=0.961",
    "pytest>=7.1.2",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
