[project]
name = "inject-it"
version = "0.3.2"
description = "Dependency injection done easy using python decorators!"
readme = "README.md"
authors = [
    {name = "Leandro de Souza", email = "leandrodesouzadev@gmail.com"},
]
license-expression = "MIT"
dependencies = []
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/plathanus-tech/python-inject-it"
download_url = "https://github.com/plathanus-tech/python-inject-it/releases/tag/v0.3.2"

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "mypy>=0.961",
    "pytest>=7.1.2",
    "pytest-asyncio>=0.18.3",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
